2008-09-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.16.0b
	* configure.ac

2008-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use pkg-config if is is available.
	* m4/openssl.m4

2008-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	DEFAULT_ANNOUNCE_INTERVAL: unsigned int -> time_t
	* src/BtAnnounce.h

2008-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	If an error occurred with a URI, remove identical URI from remaining
	URI list because it is likely that same error occurred in the end and it
	is waste of time.
	* src/AbstractCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h

2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed wrong comment.
	* src/DefaultPeerStorage.cc

2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved implementation to SimpleRandomizer.cc from SimpleRandomizer.h.
	Added return value of getpid() to argument of srand() to achieve more
	randomized value.
	* src/SimpleRandomizer.cc
	* src/SimpleRandomizer.h

2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Contact tracker frequently when the number of connections are 0	and
	download is not finished yet.
	* src/ActivePeerConnectionCommand.cc
	* src/BtAnnounce.h
	* src/DefaultBtAnnounce.cc
	* src/DefaultBtAnnounce.h
	* test/MockBtAnnounce.h
	
2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved threshold values to UTPexExtensionMessage.
	* src/DefaultBtInteractive.cc
	* src/Peer.cc
	* src/Peer.h
	* src/UTPexExtensionMessage.cc
	* src/UTPexExtensionMessage.h
	* test/UTPexExtensionMessageTest.cc

2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added _incoming member to Peer class and made it true if the peer
	initiated connection. Don't add those peer to UTPex message.
	If extended handshake is received, assign _incoming to false.
	* src/DefaultBtInteractive.cc
	* src/HandshakeExtensionMessage.cc
	* src/Peer.cc
	* src/Peer.h